# AgenticAI

1_foundations/: 4_lab4.ipynb  app.py  lab1.ipynb  lab2.ipynb  lab3.ipynb  lab4.ipynb  lab5.ipynb
1_foundations/me/: summary.txt
2_openai/: 1_lab1.ipynb  1_openai_sdk_intro.ipynb  2_cold sales.ipynb  lab1.ipynb  lab2.ipynb  lab3.ipynb  lab4.ipynb
2_openai/deep_research/: deep_research.py  email_agent.py  research_manager.py
3_crew/coder_4/: README.md  pyproject.toml
3_crew/coder_4/output/: code_and_output.txt
3_crew/coder_4/src/coder_4/: main.py
3_crew/debate_1/: README.md  pyproject.toml
3_crew/debate_1/output/: decide.md  oppose.md  propose.md
3_crew/debate_1/src/debate_1/: main.py
3_crew/debate_1/src/debate_1/config/: agents.yaml
3_crew/engineering_team_5/: README.md  pyproject.toml
3_crew/engineering_team_5/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
3_crew/engineering_team_5/src/engineering_team_5/: main.py
3_crew/engineering_team_5/src/engineering_team_5/config/: agents.yaml
3_crew/financial_researcher_2/: README.md  pyproject.toml
3_crew/financial_researcher_2/output/: report.md
3_crew/financial_researcher_2/src/financial_researcher_2/: crew.py  main.py
3_crew/stock_picker_3/: README.md  pyproject.toml
3_crew/stock_picker_3/output/: decision.md  research_report.json  trending_companies.json
3_crew/stock_picker_3/src/stock_picker_3/: crew without memory.py  crew.py  main.py
4_langgraph/: lab1.ipynb  lab2.ipynb  lab3.ipynb  lab4.ipynb  memory.db-shm  memory.db-wal
4_langgraph/sandbox/: dinner.md
5_autogen/: lab1.ipynb  lab2.ipynb  lab3.ipynb  lab4.ipynb
5_autogen/sandbox/: flights.md
6_mcp/: lab1.ipynb  lab2.ipynb  lab3.ipynb  lab4.ipynb  lab5.ipynb  mcp_params.py  traders.py
