[project]
name = "coder_4"
version = "0.1.0"
description = "coder_4 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.0"
]

[project.scripts]
coder_4 = "coder_4.main:run"
run_crew = "coder_4.main:run"
train = "coder_4.main:train"
replay = "coder_4.main:replay"
test = "coder_4.main:test"
run_with_trigger = "coder_4.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
