[project]
name = "debate_1"
version = "0.1.0"
description = "debate_1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.14.0",
]

[project.scripts]
debate_1 = "debate_1.main:run"
run_crew = "debate_1.main:run"
train = "debate_1.main:train"
replay = "debate_1.main:replay"
test = "debate_1.main:test"
run_with_trigger = "debate_1.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
