[project]
name = "engineering_team_5"
version = "0.1.0"
description = "engineering_team_5 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.14.0",
    "gradio>=6.12.0",
]

[project.scripts]
engineering_team_5 = "engineering_team_5.main:run"
run_crew = "engineering_team_5.main:run"
train = "engineering_team_5.main:train"
replay = "engineering_team_5.main:replay"
test = "engineering_team_5.main:test"
run_with_trigger = "engineering_team_5.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
