[project]
name = "financial_researcher_2"
version = "0.1.0"
description = "financial_researcher_2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,litellm,tools]==1.14.0",
]

[project.scripts]
financial_researcher_2 = "financial_researcher_2.main:run"
run_crew = "financial_researcher_2.main:run"
train = "financial_researcher_2.main:train"
replay = "financial_researcher_2.main:replay"
test = "financial_researcher_2.main:test"
run_with_trigger = "financial_researcher_2.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
